--- a/portfolio2-details.html
+++ b/portfolio2-details.html
@@ -133,7 +133,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: </li>
+                <li><strong>Client</strong>: Abi</li>
                 <li><strong>Project date</strong>: 01 March, 2020</li>
                 <li><strong>Project URL</strong>: <a href="https://abisirsath1e.github.io/Movie" target="_blank">www.BookYourSeat.com</a></li>
               </ul>
