--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <div class="resume-item">
               <h4>QA Engineer</h4>
               <h5>2020 - Present</h5>
-              <p><em>Pune, Maharashtra, IND </em></p>
+              <p><em><h4><> Xoriant IT Solutions, pune, Maharashtra, IND </em></p>
               <ul>
                 <li>Designing and Executing test cases from the Functional specifications.</li>
                 <li>Performed Functionality Testing, Retesting and Regression Testing.</li>
