--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -56,7 +56,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/abi.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/abhi.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Abhijeet Sirsath</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> 
