--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abhijeet Sirsath</h1>
-      <p>I'm <span class="typed" data-typed-items="QA Engineer, Automation Tester, Developer, Frontend Developer, UI Developer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="QA Engineer, Automation Tester, UI Tester, Frontend Developer, UI Developer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -144,12 +144,7 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p> 
-
-
-
-
-
-
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur dolor est, feugiat quis cursus eget, mollis vitae lacus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras quis orci eleifend, commodo nulla fringilla, imperdiet nunc. Vivamus in mollis tortor, eu lobortis mauris. Etiam eget orci quis eros interdum tincidunt eu ultricies ligula. Cras diam justo, accumsan id scelerisque a, tempus sit amet tortor. Mauris cursus sapien ex, id varius nisl vulputate sit amet. Vestibulum at enim eget enim egestas aliquet malesuada sodales lorem. Donec tincidunt aliquet metus eu venenatis. Proin nec ultricies diam, et tempus nisi. Donec mattis neque neque, vitae ultricies ligula dapibus et. Ut tincidunt finibus justo, quis pellentesque justo efficitur quis. Aenean semper fringilla augue, non semper nunc tincidunt molestie
           </p>
         </div>
 
