--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center" class="img-fluid">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abhijeet Sirsath</h1>
       <p>I'm <span class="typed" data-typed-items="QA Engineer, Automation Tester, UI Tester, Frontend Developer, UI Developer"></span></p>
