--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Abhijeet_Sirsath</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="57x57" href="title/apple-icon-57x57.png">
@@ -81,7 +82,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center" class="img-fluid">
+  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Abhijeet Sirsath</h1>
       <p>I'm <span class="typed" data-typed-items="QA Engineer, Automation Tester, UI Tester, Frontend Developer, UI Developer"></span></p>
