--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="section-title">
           <h2>About</h2>
           <h4>I'm Abhijeet Sirsath,</h4>
-          <p class="abhi">  I'm from Aurangabad. I have completed my Bachelors's from Deogiri College,Aurangabad.I have 1.5+ years of experience in Software Testing that includes Manual testing and Automation testing which comprises of Functional testing, Regression testing, Web service testing, API testing and Performance testing and also having some good knowledge in Frontend Designing by using HTML and CSS</p>
+          <p class="abhi">  I'm from Aurangabad. I have completed my Bachelors's in Computer Application from Deogiri College,Aurangabad.I have 1.5+ years of experience in Software Testing that includes Manual testing and Automation testing which comprises of Functional testing, Regression testing, Web service testing, API testing and Performance testing and also having some good knowledge in Frontend Designing by using HTML and CSS</p>
         </div>
 
         <div class="row">
