--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Abhijeet Sirsath</h4>
-              <p><em>Innovative and Quick Learner QA Engineer with 1.5+ years of experience Software Testing and also having HTML and CSS knowledge.</em></p>
+              <p><em>Innovative and Quick Learner QA Engineer with 1.7+ years of experience Software Testing and also having HTML and CSS knowledge.</em></p>
               <ul>
                 <li>Aurangabad(Maharashtra), India</li>
                 <li>+91-7798243457</li>
@@ -272,7 +272,7 @@
             <div class="resume-item">
               <h4>QA Engineer</h4>
               <h5>2020 - Present</h5>
-              <p><em> Xoriant IT Solutions, pune, Maharashtra, IND </em></p>
+              <p><em> Xoriant IT Solutions, Pune, Maharashtra, India </em></p>
               <ul>
                 <li>Designing and Executing test cases from the Functional specifications.</li>
                 <li>Performed Functionality Testing, Retesting and Regression Testing.</li>
