--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="section-title">
           <h2>About</h2>
           <h4>I'm Abhijeet Sirsath,</h4>
-          <p class="abhi">  I'm from Aurangabad. I have completed my Bachelors's in Computer Application from Deogiri College,Aurangabad.I have 1.5+ years of experience in Software Testing that includes Manual testing and Automation testing which comprises of Functional testing, Regression testing, Web service testing, API testing and Performance testing and also having some good knowledge in Frontend Designing by using HTML and CSS</p>
+          <p class="abhi">  I'm from Aurangabad. I have completed my Bachelors's in Computer Application from Deogiri College,Aurangabad.I have 1.7 + years of experience in Software Testing that includes Manual testing and Automation testing which comprises of Functional testing, Regression testing, Web service testing, API testing and Performance testing and also having some good knowledge in Frontend Designing by using HTML and CSS</p>
         </div>
 
         <div class="row">
@@ -106,7 +106,7 @@
             <img src="assets/img/abi.jpg" class="img-fluid" alt="" width="400px" height="1px">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>QA Engineer &amp; Web Developer.</h3>
+            <h3>QA Engineer &amp; Automation Test Engineer.</h3>
            
             <div class="row">
               <div class="col-lg-6">
@@ -121,7 +121,7 @@
                 <ul>
                   
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BCA</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abhijeetsirsath0101@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abhijeetsirsath1e@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Aurangabad(Maharashtra), India</span></li>
                 </ul>
               </div>
@@ -256,7 +256,7 @@
               <ul>
                 <li>Aurangabad(Maharashtra), India</li>
                 <li>+91-7798243457</li>
-                <li>abhijeetsirsath0101@gmail.com</li>
+                <li>abhijeetsirsath1e@gmail.com</li>
               </ul>
             </div>
 
@@ -350,7 +350,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>abhijeetsirsath0101@gmail.com</p>
+                <p>abhijeetsirsath1e@gmail.com</p>
               </div>
 
               <div class="phone">
