--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <ul>
                   
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BCA</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abhijeetsirsath1e@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abhijeetsirsath30@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Aurangabad(Maharashtra), India</span></li>
                 </ul>
               </div>
@@ -256,7 +256,7 @@
               <ul>
                 <li>Aurangabad(Maharashtra), India</li>
                 <li>+91-7798243457</li>
-                <li>abhijeetsirsath1e@gmail.com</li>
+                <li>abhijeetsirsath30@gmail.com</li>
               </ul>
             </div>
 
@@ -350,7 +350,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>abhijeetsirsath1e@gmail.com</p>
+                <p>abhijeetsirsath30@gmail.com</p>
               </div>
 
               <div class="phone">
