--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
     </section>
     <!-- End About Section -->
 
+    
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
       <div class="container">
@@ -155,36 +156,36 @@
 
             <div class="progress">
               <span class="skill">JAVA <i class="val">90%</i></span>
-              <div class="progress-bar-wrap1">
-                <div class="progress-bar1" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="background-color: #ff1e00"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">HTML <i class="val">80%</i></span>
-              <div class="progress-bar-wrap2">
-                <div class="progress-bar2" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="background-color: #ff7300"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">CSS <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="background-color: rgb(224, 221, 59)"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">PHP <i class="val">70%</i></span>
-              <div class="progress-bar-wrap8">
-                <div class="progress-bar8" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="background-color: #a82727"></div>
               </div>
             </div>
 
             <div class="progress">
                 <span class="skill">BOOTSTRAP <i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
-                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="background-color: #0aee15"></div>
                 </div>
               </div>
 
@@ -194,45 +195,48 @@
 
             <div class="progress">
               <span class="skill">SELENIUM <i class="val">90%</i></span>
-              <div class="progress-bar-wrap3">
-                <div class="progress-bar3" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="background-color: #2f00ff"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">TESTNG <i class="val">80%</i></span>
-              <div class="progress-bar-wrap4">
-                <div class="progress-bar4" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="background-color: #cf44c4"></div>
               </div>
             </div>
 
             <div class="progress">
               <span class="skill">REST-API <i class="val">60%</i></span>
-              <div class="progress-bar-wrap5">
-                <div class="progress-bar5" role="progressbar" aria-valuenow="60" aria-valuemin="0"  aria-valuemax="100"></div>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"  aria-valuemax="100" style="background-color: #050a44"></div>
               </div>
             </div>
 
             <div class="progress">
                 <span class="skill">JMETER <i class="val">60%</i></span>
-                <div class="progress-bar-wrap6">
-                  <div class="progress-bar6" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="background-color: #06c3fd"></div>
                 </div>
               </div>
 
               <div class="progress">
                 <span class="skill">GIT/GITHUB <i class="val">60%</i></span>
-                <div class="progress-bar-wrap7">
-                  <div class="progress-bar7" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar-wrap">
+                  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="background-color: rgb(0, 0, 0)"></div>
                 </div>
               </div>
+
 
           </div>
 
         </div>
 
       </div>
-    </section><!-- End Skills Section -->
+    </section>
+    <!-- End Skills Section -->
+
 
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
