--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
         <div class="section-title">
           <h2>About</h2>
           <h4>I'm Abhijeet Sirsath,</h4>
-          <p class="abhi">  I'm from Aurangabad. I have completed my Bachelors's in Computer Application from Deogiri College,Aurangabad.I have around 2 years of experience in Software Testing that includes Manual testing and Automation testing which comprises of Functional testing, Regression testing, Web service testing, API testing and Performance testing and also having some good knowledge in Frontend Designing by using HTML and CSS</p>
+          <p class="abhi">As a Bachelor’s in Computer Applications graduate And I have completed Six Month software
+            testing course with strong knowledge in object-oriented programming, debugging code test
+            script seeks to join the growing organization. Am quick learner and can master new technologies
+            and be successful working in both team and self-directed settings.</p>
         </div>
 
         <div class="row">
