--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <ul>
                   
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BCA</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>abhijeetsirsath555@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sirsathabhijeet30@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Aurangabad(Maharashtra), India</span></li>
                 </ul>
               </div>
@@ -263,7 +263,7 @@
               <ul>
                 <li>Aurangabad(Maharashtra), India</li>
                 <li>+91-7249759437</li>
-                <li>abhijeetsirsath555@gmail.com</li>
+                <li>sirsathabhijeet30@gmail.com</li>
               </ul>
             </div>
             <!-- -->
@@ -348,7 +348,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>abhijeetsirsath555@gmail.com</p>
+                <p>sirsathabhijeet30@gmail.com</p>
               </div>
 
               <div class="phone">
