--- a/index.html
+++ b/index.html
@@ -158,35 +158,35 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">JAVA <i class="val">90%</i></span>
+              <span class="skill"> JAVA <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="background-color: #ff1e00"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">80%</i></span>
+              <span class="skill"> HTML <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="background-color: #ff7300"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">CSS <i class="val">70%</i></span>
+              <span class="skill"> CSS <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="background-color: rgb(224, 221, 59)"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">70%</i></span>
+              <span class="skill"> PHP <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="background-color: #a82727"></div>
               </div>
             </div>
 
             <div class="progress">
-                <span class="skill">BOOTSTRAP <i class="val">60%</i></span>
+                <span class="skill"> BOOTSTRAP <i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="background-color: #0aee15"></div>
                 </div>
@@ -197,28 +197,28 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
             <div class="progress">
-              <span class="skill">SELENIUM <i class="val">90%</i></span>
+              <span class="skill"> SELENIUM <i class="val">90%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="background-color: #2f00ff"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">TESTNG <i class="val">80%</i></span>
+              <span class="skill"> Cypress <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="background-color: #cf44c4"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">REST-API <i class="val">60%</i></span>
+              <span class="skill"> jMETER <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"  aria-valuemax="100" style="background-color: #050a44"></div>
               </div>
             </div>
 
             <div class="progress">
-                <span class="skill">JMETER <i class="val">60%</i></span>
+                <span class="skill"> REST-API <i class="val">60%</i></span>
                 <div class="progress-bar-wrap">
                   <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="background-color: #06c3fd"></div>
                 </div>
@@ -268,7 +268,7 @@
             </div>
             <!-- -->
             
-            <div class="resume-item">
+            <div>
               
             </div>
             </div>
