--- a/index.html
+++ b/index.html
@@ -111,7 +111,6 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 January 1997</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://abisirsath1e.github.io/blog" target="_blank"><span>www.MyBlogs.com</span></a></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-7798243457</span></li>
                   
@@ -119,8 +118,6 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>BCA</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sirsathabhijeet01@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Aurangabad(Maharashtra), India</span></li>
                 </ul>
@@ -128,8 +125,7 @@
             </div>
             <div>
             <p class="abhi1">
-              I am looking forward to working in an organization that provides the environment for growth with competent and were strong leaders in Manual and Automation Testing who have experience in Functional, Non-Functional, Globalization, UI Testing, and API Testing. I have an urge and inclination for learning new technologies and a strong work ethic. I will be committed to excellence in all projects undertaken.
-            </p>
+              As a Bachelor’s in Computer Applications graduate And I have Around 3 Years of work experience in software testing with knowledge in object-oriented programming, debugging code test script seeks to join the growing organization. I am quick learner and can master new technologies and be successful working in both team and self-directed settings.            </p>
             </div>
           </div>
         </div>
