--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           <h2>About</h2>
           <h4>I'm Abhijeet Sirsath,</h4>
           <p class="abhi">Experienced QA Engineer specializing in automation testing, proficient in Selenium, Cypress, and Java programming. Skilled in executing test cases, tracking bugs, and generating reports using JIRA. Extensive knowledge of functional, integration, regression, and browser compatibility testing. Experienced with TestNG, Maven, and Postman. Familiarity with Git, GitHub, and Jenkins. Strong analytical and problem-solving skills. Quick learner, adaptable to new technologies. Excellent communication and collaboration abilities. Seeking opportunities to drive quality assurance initiatives and contribute to software excellence. Let's connect and discuss potential collaborations!</p>
+          <p class="abhi">Experienced IT support specialist with 4.7 years in troubleshooting and user-centric solutions. Currently transitioning to software testing, bringing a proven track record of adaptability and a passion for quality assurance. Excited to apply my technical expertise to contribute to impactful testing projects and embrace new challenges in the field.</p>
         </div>
 
         <div class="row">
@@ -112,13 +113,13 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://abisirsath1e.github.io/blog" target="_blank"><span>www.MyBlogs.com</span></a></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-7798243457</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91-7249759437</span></li>
                   
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sirsathabhijeet01@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>sirsathabhijeet40@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Aurangabad(Maharashtra), India</span></li>
                 </ul>
               </div>
@@ -252,8 +253,8 @@
               <p><em>Innovative and Quick Learner QA Engineer with 2+ years of experience Software Testing and also having HTML and CSS knowledge.</em></p>
               <ul>
                 <li>Aurangabad(Maharashtra), India</li>
-                <li>+91-7798243457</li>
-                <li>sirsathabhijeet01@gmail.com</li>
+                <li>+91-7249759437</li>
+                <li>sirsathabhijeet40@gmail.com</li>
               </ul>
             </div>
             <!-- -->
@@ -338,13 +339,13 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>sirsathabhijeet01@gmail.com</p>
+                <p>sirsathabhijeet40@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+91-7798243457</p>
+                <p>+91-7249759437</p>
               </div>
 
               
