Modify Download CV

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         
         <div class="section-title">
           <h2 >Resume</h2>
-           <div><a href="Abhijeet_Sirsath_QA.pdf" download='Abhijeet_Sirsath' target="_blank"><button class="btn"><i class="fa fa-download" ></i> Download</button></div></a>
+           <div><a href="./Abhijeet_Sirsath_QA.pdf" download='Abhijeet_Sirsath' target="_blank"><button class="btn"><i class="fa fa-download" ></i> Download</button></div></a>
           <p class="abhi">
             Analyzing the requirements & preparing test documentation for the same. Involved in the requirement study, design and development of the test cases. Review of Test Cases/Test Document. Performed Functionality Testing, Retesting and Regression Testing. Responsible for creating POM and Test class for the Automation Framework. Designed and executed test cases according to functional specifications. Execution of Test Cases. Test Execution of system test suite. Managed Defect tracking and reporting Logged defect in JIRA
 
